# Sunshine-Toolbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sunshine-Toolbox.pro  main.cpp  requirements.txt  setup.py  sunshine-toolbox.py
.github/workflows/: build-and-release.yaml  build.yaml  qt-msvc-build-and-release.yml  qt-msvc-build.yml
SteamWindowManager/: steamwindowmanager.cpp  steamwindowmanager.h
src/: setup.py  sunshine-toolbox.py
